# ChampyLight

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
ChampyLight/src/: Makefile  champylight.c  champylight.h  constants.h  curlClient.c  dmx.c  dmx.h  dmxOperations.c  dmxOperations.h  tcpclient.c  tcpclient.h  utils.c  utils.h
DMXWheel/src/: DMXWheel.c  Makefile
controller/: CMakeLists.txt
controller/src/: Makefile  champylight.c  champylight.h  curlClient.c  curlClient.h  dmx.c  dmx.h  dmxOperations.c  dmxOperations.h  utils.c  utils.h
controller/test/: champylightTestSuite.h  curlClientTestSuite.h  dmxOperationsTestSuite.h  dmxTestSuite.h  utilsTestSuite.h
deamon/: CMakeLists.txt  deamon
deamon/src/: Makefile  dmx.c  dmxd.c
deamon/test/: dmxdTestSuite.h
dmx/: README
dmx/src/: Makefile  dmx.c  dmx.h  dmxd.c
scripts/: docker_push
values_handler/doc/html/: annotated.html  champylight_8c.html  champylight_8h.html  champylight_8h_source.html  classes.html  constants_8h.html  constants_8h_source.html  curl_client_8c.html  dmx_8c.html  (+30 more)
values_handler/src/: champylight  champylight.c  champylight.h  constants.h  curlClient.c  curlClient.h  dmx.c  dmx.h  dmxOperations.c  dmxOperations.h  utils.c  utils.h
www/: README.md  composer.json
www/app/: AppKernel.php
www/web/: app_dev.php
www_test/: composer.json  controller.php  index.php
www_test/frontend_test/: index.html
www_test/model/: data_queries.php  dbConnection.php  errorsHandling.php
www_test/template/: constants.php  control.php  layout.php  patch.php
(+107 files in other folders)
